2006-11-12  Bruno coudoin  <bruno.coudoin@free.fr>

	- Added support for sqlite compilation under windows

	* Makefile.mingw.in:
	* src/boards/Makefile.mingw:
	* src/boards/python/melody.py: removed printout
	* src/gcompris/Makefile.mingw:
	* tools/py2exe/gcompris.py:

2006-11-12  Bruno coudoin  <bruno.coudoin@free.fr>

	* src/boards/erase.c: (erase_create_item): fixed out of bounds image

2006-11-10  Bruno coudoin  <bruno.coudoin@free.fr>

	- Removed Ofset Logo. GCompris is no more an Ofset project.

	* boards/skins/gartoon/ofsetlogo.png:
	* src/gcompris/about.c: (gc_about_start):


	* src/gcompris/gameutil.c: Fixed to add G_STDIO_NO_WRAP_ON_UNIX
	* src/gcompris/gcompris.c: (gc_fullscreen_set): Applied a patch from Karl Tomlinson


2006-11-10  Yves Combe  <yves@ycombe.net>

	Add python binding for sound policy (gcompris.sound).
	Modify Melody to use it.

	* po/Makefile.in.in:
	* src/boards/py-mod-sound.c: (py_gc_sound_policy_set),
	(py_gc_sound_policy_get), (python_gcompris_sound_module_init):
	* src/boards/python/melody.py:

2006-11-09  Yves Combe  <yves@ycombe.net>

	Landing of GCOMPRIS_8_2_CROSSCOMPIL branch.
	Allow cross compilation for win32 with mingw/Linux.
	Use GLib functions instead of unix one .

	Adapt Tuxpaint launcher to make it work on Windows.

	* Makefile.am:
	* Makefile.mingw.in:
	* README.mingw-cross:
	* acinclude.m4:
	* configure.in:
	* cross-configure.sh:
	* cross-make.sh:
	* gcompris-installer.nsi.in:
	* po/Makefile.in.in:
	* src/boards/Makefile.am:
	* src/boards/Makefile.mingw:
	* src/boards/advanced_colors.c: (colors_next_level),
	(colors_create_item):
	* src/boards/algebra.c: (get_operand), (get_random_number):
	* src/boards/algebra_guesscount.c: (generate_numbers):
	* src/boards/awele.c: (initBoardGraphics), (updateNbBeans):
	* src/boards/awele_alphaBeta.c: (firstChild):
	* src/boards/awele_utils.c: (randplay):
	* src/boards/click_on_letter.c: (click_on_letter_create_item):
	* src/boards/clickgame.c: (clickgame_create_item), (game_won):